Fix lamp position on mobile

--- a/_scss/components/_content-panel-custom.scss
+++ b/_scss/components/_content-panel-custom.scss
@@ -180,7 +180,7 @@
         }
 
         @media (max-width: $mobile-media) {
-          bottom: -12px;
+          bottom: -8px;
         }
       }
 
